# bodhi.github.com

./: .gitignore  CNAME  _config.yml  about.markdown  archive.html  index.markdown  style.css  the_index.html
_layouts/: about.html  archive.html  default.html  front.html  link.html  plain.html
_posts/: 2011-11-30-turning-callbacks-inside-out.markdown  2011-12-13-dont-tab-me-bro.markdown  2012-02-19-tennent-correspondence-principle.markdown  2013-08-16-amber-smalltalk.markdown  2013-08-16-google-lisp-koans.markdown  2013-08-16-ractivejs.markdown  2013-08-16-statistical-formulas-for-programmers.markdown  2013-09-13-the-predicate-module-pattern.markdown  2014-12-14-serial-promise-queue.markdown  2017-02-12-typeclass-cheatsheet.markdown  2018-05-09-literating-haskell.markdown  2018-05-10-callback-and-state.markdown  2018-05-14-storable-refs.markdown
callback-and-state/: Makefile  README.md  callback-and-state.cabal
callback-and-state/src/: Main.lhs
drafts/: tennent.markdown
haskell/_posts/: 2014-04-01-begin.markdown  2014-04-04-step-2.markdown
literate-haskell/: Makefile  README.md  literate-haskell.cabal
literate-haskell/src/: Main.lhs
storable-refs/: Makefile  README.md  stack.yaml  storable-refs.cabal
storable-refs/src/: Main.lhs
sudoku/_posts/: 2014-11-27-sudoku.md
sudoku/v1/: index.html  sudoku.css  sudoku.js  view.js
sudoku/v1/jsx/: view.js
trajectory_replanning/: astar.pde  maze.pde  path.pde  search.pde  state.pde
trajectory_replanning/_posts/: 2015-07-14-trajectory-replanning.markdown
